SMS Sender added

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -12,7 +12,7 @@
 
     <ul class="nav navbar-top-links navbar-right">
         <!--<a class="menubar-brand" href="index.html"><i class="fa fa-user fa-fw"></i> Logout</a>-->
-        <a class="menubar-brand" href="index.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+        <a class="menubar-brand" th:href="@{/logout}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
     </ul>
 
 
