--- a/src/main/resources/templates/member/listMember.html
+++ b/src/main/resources/templates/member/listMember.html
@@ -71,7 +71,9 @@
                 null,
                 { "width": "18%" },
                 { "width": "18%" },
-                { "width": "15%" }
+                { "width": "15%" },
+                null,
+                null
             ]
         });
     });
