--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -7,6 +7,7 @@
 <title>Family Tree</title>
 
 <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+<link th:href="@{/css/bootstrap-select.min.css}" rel="stylesheet">
 <link th:href="@{/css/metisMenu.min.css}" rel="stylesheet">
 <link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet">
 <link th:href="@{/css/dataTables.responsive.css}" rel="stylesheet">
@@ -16,6 +17,7 @@
 
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/bootstrap-select.min.js}"></script>
 <script th:src="@{/js/metisMenu.min.js}"></script>
 <script th:src="@{/js/jquery.dataTables.min.js}"></script>
 <script th:src="@{/js/dataTables.bootstrap.min.js}"></script>
