--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -14,6 +14,7 @@
 <link th:href="@{/css/sb-admin-2.css}" rel="stylesheet">
 <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/jquery-ui.min.css}" rel="stylesheet">
+<link th:href="@{/css/fileinput.min.css}" rel="stylesheet">
 
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
@@ -24,3 +25,4 @@
 <script th:src="@{/js/dataTables.responsive.js}"></script>
 <script th:src="@{/js/sb-admin-2.js}"></script>
 <script th:src="@{/js/jquery-ui.min.js}"></script>
+<script th:src="@{/js/fileinput.min.js}"></script>
