Family Tree Implemented with Highlighted Avatar (Selected User)

--- a/src/main/resources/static/css/tree-hierarchy-view.css
+++ b/src/main/resources/static/css/tree-hierarchy-view.css
@@ -65,6 +65,10 @@
     width: 50%;
 }
 
+.oneChild > .hv-item-child:after {
+    display: none;
+}
+
 .hv-wrapper .hv-item .hv-item-children .hv-item-child:last-child:after {
     width: calc(50% + 1px);
 }
