--- a/src/main/resources/templates/tree/familyTree.html
+++ b/src/main/resources/templates/tree/familyTree.html
@@ -26,7 +26,7 @@
 
                                 <!-- Root -->
                                 <div th:classappend="${not #lists.isEmpty(familyTree.children) ? 'hv-item-parent' : 'hv-item-child'}">
-                                    <div class="person">
+                                    <div th:classappend="${familyTree.selectedMember == true ? 'person selectedMember' : 'person'}">
                                         <img th:src="${familyTree.photoStr}" alt="">
                                         <p class="name" th:text="${familyTree.name}">
                                         </p>
@@ -35,11 +35,11 @@
 
                                 <!-- Child -->
                                 <div th:fragment="fragment_node(familyTree)" th:remove="tag">
-                                    <div class="hv-item-children">
-                                        <div class="hv-item-child" th:each="child : ${familyTree.children}">
+                                    <div class="hv-item-children" th:classappend="${(familyTree.children!= null and #lists.size(familyTree.children) &lt; 2) ? 'oneChild' : 'multi'}">
+                                        <div class="hv-item-child" th:each="child, status: ${familyTree.children}">
                                             <div class="hv-item" th:if="${not #lists.isEmpty(child.children)}">
-                                                <div th:classappend="${not #lists.isEmpty(child.children) ? 'hv-item-parent' : 'hv-item-children'}">
-                                                    <div class="person">
+                                                <div th:classappend="${#lists.size(child.children) &lt; 2 ? 'hv-item-parent oneChild' : 'hv-item-parent multi'}">
+                                                    <div th:classappend="${child.selectedMember == true ? 'person selectedMember' : 'person'}">
                                                         <img th:src="${child.photoStr}" alt="">
                                                         <p class="name" th:text="${child.name}">
                                                         </p>
@@ -49,7 +49,7 @@
                                             </div>
                                             <div class="hv-item" th:if="${#lists.isEmpty(child.children)}">
                                                 <div th:classappend="${not #lists.isEmpty(child.children) ? 'hv-item-parent' : 'hv-item-children'}">
-                                                    <div class="person">
+                                                    <div th:classappend="${child.selectedMember == true ? 'person selectedMember' : 'person'}">
                                                         <img th:src="${child.photoStr}" alt="">
                                                         <p class="name" th:text="${child.name}">
                                                         </p>
