Edit Member From Group Implemented

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -26,3 +26,4 @@
 <script th:src="@{/js/sb-admin-2.js}"></script>
 <script th:src="@{/js/jquery-ui.min.js}"></script>
 <script th:src="@{/js/fileinput.min.js}"></script>
+<script th:src="@{/js/bootbox.min.js}"></script>
