--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -3,9 +3,11 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 body {
   background-color: #f8f8f8;
   height: 100%;
+  font-family: 'Poppins';
 }
 #wrapper {
   width: 100%;
