--- a/src/main/resources/templates/group/listGroup.html
+++ b/src/main/resources/templates/group/listGroup.html
@@ -25,7 +25,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-default">
+                <div class="panel panel-green">
                     <div class="panel-heading">
                         All Groups
                     </div>
@@ -47,7 +47,7 @@
                                 <td class="center">
                                     <a th:href="@{/group/detail(id=*{group.id})}" class="btn btn-outline btn-primary">View</a>
                                     <a th:href="@{/group/edit(id=*{group.id})}" class="btn btn-outline btn-success">Edit</a>
-                                    <a th:href="@{/group/delete(id=*{group.id})}" class="btn btn-outline btn-danger">Delete</a></td>
+                                    <a th:href="@{/group/delete(id=*{group.id})}" class="btn btn-outline btn-danger remove" onclick="removeWarning()">Delete</a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -71,6 +71,17 @@
                 { "width": "20%" }
             ]
         });
+
+        /*$(".remove").on('click', function (e) {
+            e.preventDefault();
+
+        });*/
+
+        function removeWarning() {
+            bootbox.confirm("Are you Sure you want to delete this Group ?", function (result) {
+                return result;
+            });
+        }
     });
 </script>
 
