--- a/src/main/resources/templates/member/listMember.html
+++ b/src/main/resources/templates/member/listMember.html
@@ -25,7 +25,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-default">
+                <div class="panel panel-green">
                     <div class="panel-heading">
                         All Members
                     </div>
